--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.105_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.105_translation-de-sabbamitta.json
@@ -18,5 +18,6 @@
   "sn35.105:16.1": "„Unbeständig, Herr.“ ",
   "sn35.105:17.1": "„Aber wenn er unbeständig ist, ist er Leiden oder Glück?“ ",
   "sn35.105:18.1": "„Leiden, Herr.“ ",
-  "sn35.105:19.1": "„Aber wenn man nicht ergreifen würde, was unbeständig und Leiden ist und zugrunde gehen muss, würden dadurch in einem Glück und Schmerz entstehen?“ "
+  "sn35.105:19.1": "„Aber wenn man nicht ergreifen würde, was unbeständig und Leiden ist und zugrunde gehen muss, würden dadurch in einem Glück und Schmerz entstehen?“ ",
+  "sn35.105:20.1": "„Nein, Herr.“ "
 }
