--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.105_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.105_translation-de-sabbamitta.json
@@ -20,5 +20,6 @@
   "sn35.105:18.1": "„Leiden, Herr.“ ",
   "sn35.105:19.1": "„Aber wenn man nicht ergreifen würde, was unbeständig und Leiden ist und zugrunde gehen muss, würden dadurch in einem Glück und Schmerz entstehen?“ ",
   "sn35.105:20.1": "„Nein, Herr.“ ",
-  "sn35.105:21.1": "„Wenn er das sieht, wird ein gebildeter edler Schüler ernüchtert vom Auge, vom Ohr, von der Nase, von der Zunge, vom Körper und vom Geist. "
+  "sn35.105:21.1": "„Wenn er das sieht, wird ein gebildeter edler Schüler ernüchtert vom Auge, vom Ohr, von der Nase, von der Zunge, vom Körper und vom Geist. ",
+  "sn35.105:21.2": "Wenn er ernüchtert ist, schwindet die Leidenschaft. Wenn die Leidenschaft schwindet, ist er befreit. Wenn er befreit ist, weiß er, dass er befreit ist. "
 }
