--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.106_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.106_translation-de-sabbamitta.json
@@ -1,3 +1,4 @@
 {
-  "sn35.106:0.1": "Verbundene Lehrreden 35.106 "
+  "sn35.106:0.1": "Verbundene Lehrreden 35.106 ",
+  "sn35.106:0.2": "11. Das Kapitel über Geborgenheit "
 }
