--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.106_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.106_translation-de-sabbamitta.json
@@ -5,5 +5,6 @@
   "sn35.106:1.1": "„Mönche und Nonnen, ich will euch den Ursprung und das Enden des Leidens lehren. ",
   "sn35.106:1.2": "Hört zu … ",
   "sn35.106:1.3": "Und was, Mönche und Nonnen, ist der Ursprung des Leidens? ",
-  "sn35.106:1.4": "Augenbewusstsein entsteht in Abhängigkeit vom Auge und Bildern. Das Zusammentreffen der drei ist Berührung. "
+  "sn35.106:1.4": "Augenbewusstsein entsteht in Abhängigkeit vom Auge und Bildern. Das Zusammentreffen der drei ist Berührung. ",
+  "sn35.106:1.5": "Berührung ist eine Bedingung für Gefühl. "
 }
