--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.106_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.106_translation-de-sabbamitta.json
@@ -7,5 +7,6 @@
   "sn35.106:1.3": "Und was, Mönche und Nonnen, ist der Ursprung des Leidens? ",
   "sn35.106:1.4": "Augenbewusstsein entsteht in Abhängigkeit vom Auge und Bildern. Das Zusammentreffen der drei ist Berührung. ",
   "sn35.106:1.5": "Berührung ist eine Bedingung für Gefühl. ",
-  "sn35.106:1.6": "Gefühl ist eine Bedingung für Verlangen. "
+  "sn35.106:1.6": "Gefühl ist eine Bedingung für Verlangen. ",
+  "sn35.106:1.7": "Das ist der Ursprung des Leidens. … "
 }
