--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.106_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.106_translation-de-sabbamitta.json
@@ -8,5 +8,6 @@
   "sn35.106:1.4": "Augenbewusstsein entsteht in Abhängigkeit vom Auge und Bildern. Das Zusammentreffen der drei ist Berührung. ",
   "sn35.106:1.5": "Berührung ist eine Bedingung für Gefühl. ",
   "sn35.106:1.6": "Gefühl ist eine Bedingung für Verlangen. ",
-  "sn35.106:1.7": "Das ist der Ursprung des Leidens. … "
+  "sn35.106:1.7": "Das ist der Ursprung des Leidens. … ",
+  "sn35.106:1.11": "Geistbewusstsein entsteht in Abhängigkeit vom Geist und Gedanken. Das Zusammentreffen der drei ist Berührung. "
 }
