--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.106_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.106_translation-de-sabbamitta.json
@@ -12,5 +12,6 @@
   "sn35.106:1.11": "Geistbewusstsein entsteht in Abhängigkeit vom Geist und Gedanken. ",
   "sn35.106:1.12": "Das Zusammentreffen der drei ist Berührung. ",
   "sn35.106:1.13": "Berührung ist eine Bedingung für Gefühl. ",
-  "sn35.106:1.14": "Gefühl ist eine Bedingung für Verlangen. "
+  "sn35.106:1.14": "Gefühl ist eine Bedingung für Verlangen. ",
+  "sn35.106:1.15": "Das ist der Ursprung des Leidens. "
 }
