--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.106_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.106_translation-de-sabbamitta.json
@@ -13,5 +13,6 @@
   "sn35.106:1.12": "Das Zusammentreffen der drei ist Berührung. ",
   "sn35.106:1.13": "Berührung ist eine Bedingung für Gefühl. ",
   "sn35.106:1.14": "Gefühl ist eine Bedingung für Verlangen. ",
-  "sn35.106:1.15": "Das ist der Ursprung des Leidens. "
+  "sn35.106:1.15": "Das ist der Ursprung des Leidens. ",
+  "sn35.106:2.1": "Und was ist das Enden des Leidens? "
 }
