--- a/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
@@ -43,7 +43,7 @@
   "dn15:6.1": "’Vezivanje je uzrok bivanju’, tako je rečeno. I na ovaj način to treba razumeti:",
   "dn15:6.2": "Zamisli da nema bilo kakvog vezivanja, u bilo kome, bilo gde, dakle",
   "dn15:6.3": "vezivanje za zadovoljstva čula, vezivanje za gledišta, vezivanje za pravila i rituale ili vezivanje za verovanje u postojanje trajnog sopstva. U potpunom odsustvu vezivanja, sa nestankom vezivanja, da li bi se bivanje moglo bilo gde uočiti?”",
-  "dn15:6.4": "„Sigurno da ne bi, poštovani gospodine.",
+  "dn15:6.4": "„Sigurno da ne bi, poštovani gospodine.”",
   "dn15:6.5": "„Zato, Ānanda, to je uzrok, izvor, poreklo i uslov bivanja, dakle vezivanje.",
   "dn15:7.1": "’Žudnja je uzrok vezivanju’, tako je rečeno. I na ovaj način to treba razumeti:",
   "dn15:7.2": "Zamisli da nema bilo kakve žudnje, u bilo kome, bilo gde, dakle",
