--- a/translation/de/blurb/sn-blurbs_translation-de.json
+++ b/translation/de/blurb/sn-blurbs_translation-de.json
@@ -820,6 +820,7 @@
   "sn-blurbs:sn35.107": "Der Ursprung und das Enden der Welt werden in Begriffen der Sinneserfahrung erklärt, die Verlangen entstehen lässt. ",
   "sn-blurbs:sn35.108": "Einbildung kommt von Anhänglichkeit an die Sinne. ",
   "sn-blurbs:sn35.109": "Die inneren Sinnesfelder sind Dinge, die einen leicht fesseln, und Verlangen ist die Fessel. ",
+  "sn-blurbs:sn35.110": "Die inneren Sinnesfelder sind Dinge, die zum Ergreifen einladen, und Verlangen ist das Ergreifen. ",
   "sn-blurbs:sn35.113": "Während er in Klausur ist, führt der Buddha zu sich selbst aus, wie das Entstehen und Enden der Welt anhand der Sinneserfahrungen erklärt werden, die zu Verlangen und Leiden führen. Ein Mönch hört ihn und der Buddha fordert ihn auf, sich diese Lehre zu merken. ",
   "sn-blurbs:sn35.132": "Schüler des Brahmanen Lohicca machen Lärm, als sie in der Nähe von Mahākaccānas Hütte im Wald Feuerholz sammeln. Mahākaccāna bringt sie zum Schweigen und rezitiert Strophen, in denen er die tugendhaften Brahmanen der Vorzeit den heutigen gegenüberstellt. Sie nehmen daran Anstoß und berichten es ihrem Lehrer, der zu Mahākaccāna geht, um die Wahrheit herauszufinden. Doch Lohicca ist so beeindruckt von Mahākaccānas Lehren über die sechs Sinne, dass er Zuflucht nimmt. ",
   "sn-blurbs:sn35.238": "Der Buddha reiht verschiedene mächtige Gleichnisse – Giftschlangen, Mörder, ein leeres Dorf usw. – zu einer ausgedehnten Parabel aneinander, die die Gefahren der Existenz und den Ausweg daraus illustriert. ",
