--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.109_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.109_translation-de-sabbamitta.json
@@ -5,5 +5,6 @@
   "sn35.109:1.1": "„Mönche und Nonnen, ich will euch die Dinge lehren, die einen leicht fesseln, sowie die Fessel. ",
   "sn35.109:1.2": "Hört zu … ",
   "sn35.109:1.3": "Was sind die Dinge, die einen leicht fesseln? Und was ist die Fessel? ",
-  "sn35.109:1.4": "Das Auge ist ein Ding, das einen leicht fesselt. "
+  "sn35.109:1.4": "Das Auge ist ein Ding, das einen leicht fesselt. ",
+  "sn35.109:1.5": "Das Sehnen und Begehren nach ihm ist die Fessel. "
 }
