--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.109_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.109_translation-de-sabbamitta.json
@@ -6,5 +6,6 @@
   "sn35.109:1.2": "Hört zu … ",
   "sn35.109:1.3": "Was sind die Dinge, die einen leicht fesseln? Und was ist die Fessel? ",
   "sn35.109:1.4": "Das Auge ist ein Ding, das einen leicht fesselt. ",
-  "sn35.109:1.5": "Das Sehnen und Begehren nach ihm ist die Fessel. "
+  "sn35.109:1.5": "Das Sehnen und Begehren nach ihm ist die Fessel. ",
+  "sn35.109:1.6": "Das Ohr … Die Nase … Die Zunge … Der Körper … "
 }
