--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.109_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.109_translation-de-sabbamitta.json
@@ -8,5 +8,6 @@
   "sn35.109:1.4": "Das Auge ist ein Ding, das einen leicht fesselt. ",
   "sn35.109:1.5": "Das Sehnen und Begehren nach ihm ist die Fessel. ",
   "sn35.109:1.6": "Das Ohr … Die Nase … Die Zunge … Der Körper … ",
-  "sn35.109:1.7": "Der Geist ist ein Ding, das einen leicht fesselt. "
+  "sn35.109:1.7": "Der Geist ist ein Ding, das einen leicht fesselt. ",
+  "sn35.109:1.8": "Das Sehnen und Begehren nach ihm ist die Fessel. "
 }
