--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.110_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.110_translation-de-sabbamitta.json
@@ -4,5 +4,6 @@
   "sn35.110:0.3": "Dinge, die zum Ergreifen einladen ",
   "sn35.110:1.1": "„Mönche und Nonnen, ich will euch die Dinge lehren, die zum Ergreifen einladen, sowie das Ergreifen. ",
   "sn35.110:1.2": "Hört zu … ",
-  "sn35.110:1.3": "Was sind die Dinge, die zum Ergreifen einladen? Und was ist das Ergreifen? "
+  "sn35.110:1.3": "Was sind die Dinge, die zum Ergreifen einladen? Und was ist das Ergreifen? ",
+  "sn35.110:1.4": "Das Auge ist ein Ding, das zum Ergreifen einlädt. "
 }
