--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.110_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.110_translation-de-sabbamitta.json
@@ -6,5 +6,6 @@
   "sn35.110:1.2": "Hört zu … ",
   "sn35.110:1.3": "Was sind die Dinge, die zum Ergreifen einladen? Und was ist das Ergreifen? ",
   "sn35.110:1.4": "Das Auge ist ein Ding, das zum Ergreifen einlädt. ",
-  "sn35.110:1.5": "Das Sehnen und Begehren nach ihm ist das Ergreifen. "
+  "sn35.110:1.5": "Das Sehnen und Begehren nach ihm ist das Ergreifen. ",
+  "sn35.110:1.6": "Das Ohr … Die Nase … Die Zunge … Der Körper … "
 }
