--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.110_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.110_translation-de-sabbamitta.json
@@ -8,5 +8,6 @@
   "sn35.110:1.4": "Das Auge ist ein Ding, das zum Ergreifen einlädt. ",
   "sn35.110:1.5": "Das Sehnen und Begehren nach ihm ist das Ergreifen. ",
   "sn35.110:1.6": "Das Ohr … Die Nase … Die Zunge … Der Körper … ",
-  "sn35.110:1.7": "Der Geist ist ein Ding, das zum Ergreifen einlädt. "
+  "sn35.110:1.7": "Der Geist ist ein Ding, das zum Ergreifen einlädt. ",
+  "sn35.110:1.8": "Das Sehnen und Begehren nach ihm ist das Ergreifen. "
 }
