--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.111_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.111_translation-de-sabbamitta.json
@@ -3,5 +3,6 @@
   "sn35.111:0.2": "11. Das Kapitel über Geborgenheit ",
   "sn35.111:0.3": "Vollständiges Verstehen innen ",
   "sn35.111:1.1": "„Mönche und Nonnen, ohne das Auge unmittelbar zu erkennen und vollständig zu verstehen, ohne dass die Leidenschaft für es schwindet und man es aufgibt, kann man das Leiden nicht beenden. ",
-  "sn35.111:1.2": "Ohne das Ohr unmittelbar zu erkennen und vollständig zu verstehen … "
+  "sn35.111:1.2": "Ohne das Ohr unmittelbar zu erkennen und vollständig zu verstehen … ",
+  "sn35.111:1.3": "Ohne die Nase unmittelbar zu erkennen und vollständig zu verstehen … "
 }
