--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.111_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.111_translation-de-sabbamitta.json
@@ -6,5 +6,6 @@
   "sn35.111:1.2": "Ohne das Ohr unmittelbar zu erkennen und vollständig zu verstehen … ",
   "sn35.111:1.3": "Ohne die Nase unmittelbar zu erkennen und vollständig zu verstehen … ",
   "sn35.111:1.4": "Ohne die Zunge unmittelbar zu erkennen und vollständig zu verstehen … ",
-  "sn35.111:1.5": "Ohne den Körper unmittelbar zu erkennen und vollständig zu verstehen … "
+  "sn35.111:1.5": "Ohne den Körper unmittelbar zu erkennen und vollständig zu verstehen … ",
+  "sn35.111:1.6": "Ohne den Geist unmittelbar zu erkennen und vollständig zu verstehen, ohne dass die Leidenschaft für ihn schwindet und man ihn aufgibt, kann man das Leiden nicht beenden. "
 }
