--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.111_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.111_translation-de-sabbamitta.json
@@ -9,5 +9,6 @@
   "sn35.111:1.5": "Ohne den Körper unmittelbar zu erkennen und vollständig zu verstehen … ",
   "sn35.111:1.6": "Ohne den Geist unmittelbar zu erkennen und vollständig zu verstehen, ohne dass die Leidenschaft für ihn schwindet und man ihn aufgibt, kann man das Leiden nicht beenden. ",
   "sn35.111:1.7": "Indem man das Auge unmittelbar erkennt und vollständig versteht, indem die Leidenschaft für es schwindet und man es aufgibt, kann man das Leiden beenden. ",
-  "sn35.111:1.8": "Indem man das Ohr … die Nase … die Zunge … unmittelbar erkennt und vollständig versteht … "
+  "sn35.111:1.8": "Indem man das Ohr … die Nase … die Zunge … unmittelbar erkennt und vollständig versteht … ",
+  "sn35.111:1.9": "Indem man den Körper unmittelbar erkennt und vollständig versteht … "
 }
