--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.112_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.112_translation-de-sabbamitta.json
@@ -1,4 +1,5 @@
 {
   "sn35.112:0.1": "Verbundene Lehrreden 35.112 ",
-  "sn35.112:0.2": "11. Das Kapitel über Geborgenheit "
+  "sn35.112:0.2": "11. Das Kapitel über Geborgenheit ",
+  "sn35.112:0.3": "Vollständiges Verstehen außen "
 }
