--- a/translation/de/site/name/sutta/sn-name_translation-de-site.json
+++ b/translation/de/site/name/sutta/sn-name_translation-de-site.json
@@ -987,6 +987,7 @@
   "sn-name:1093.sn35.109": "Dinge, die einen leicht fesseln ",
   "sn-name:1094.sn35.110": "Dinge, die zum Ergreifen einladen ",
   "sn-name:1095.sn35.111": "Vollständiges Verstehen innen ",
+  "sn-name:1096.sn35.112": "Vollständiges Verstehen außen ",
   "sn-name:1097.sn35.113": "Mithören ",
   "sn-name:1098.sn35-lokakamagunavagga": "Das Kapitel über die Welt und die Arten von Sinnesreizen ",
   "sn-name:1109.sn35-gahapativagga": "Das Kapitel mit Hausbesitzern ",
