--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.112_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.112_translation-de-sabbamitta.json
@@ -1,5 +1,6 @@
 {
   "sn35.112:0.1": "Verbundene Lehrreden 35.112 ",
   "sn35.112:0.2": "11. Das Kapitel über Geborgenheit ",
-  "sn35.112:0.3": "Vollständiges Verstehen außen "
+  "sn35.112:0.3": "Vollständiges Verstehen außen ",
+  "sn35.112:1.1": "„Mönche und Nonnen, ohne Bilder unmittelbar zu erkennen und vollständig zu verstehen … "
 }
