--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.112_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.112_translation-de-sabbamitta.json
@@ -4,5 +4,6 @@
   "sn35.112:0.3": "Vollständiges Verstehen außen ",
   "sn35.112:1.1": "„Mönche und Nonnen, ohne Bilder unmittelbar zu erkennen und vollständig zu verstehen … ",
   "sn35.112:1.2": "Ohne Töne unmittelbar zu erkennen und vollständig zu verstehen … ",
-  "sn35.112:1.3": "Ohne Düfte unmittelbar zu erkennen und vollständig zu verstehen … "
+  "sn35.112:1.3": "Ohne Düfte unmittelbar zu erkennen und vollständig zu verstehen … ",
+  "sn35.112:1.4": "Ohne Geschmäcke unmittelbar zu erkennen und vollständig zu verstehen … "
 }
