--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.112_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.112_translation-de-sabbamitta.json
@@ -5,5 +5,6 @@
   "sn35.112:1.1": "„Mönche und Nonnen, ohne Bilder unmittelbar zu erkennen und vollständig zu verstehen … ",
   "sn35.112:1.2": "Ohne Töne unmittelbar zu erkennen und vollständig zu verstehen … ",
   "sn35.112:1.3": "Ohne Düfte unmittelbar zu erkennen und vollständig zu verstehen … ",
-  "sn35.112:1.4": "Ohne Geschmäcke unmittelbar zu erkennen und vollständig zu verstehen … "
+  "sn35.112:1.4": "Ohne Geschmäcke unmittelbar zu erkennen und vollständig zu verstehen … ",
+  "sn35.112:1.5": "Ohne Berührungen unmittelbar zu erkennen und vollständig zu verstehen … "
 }
