--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.112_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.112_translation-de-sabbamitta.json
@@ -6,5 +6,6 @@
   "sn35.112:1.2": "Ohne Töne unmittelbar zu erkennen und vollständig zu verstehen … ",
   "sn35.112:1.3": "Ohne Düfte unmittelbar zu erkennen und vollständig zu verstehen … ",
   "sn35.112:1.4": "Ohne Geschmäcke unmittelbar zu erkennen und vollständig zu verstehen … ",
-  "sn35.112:1.5": "Ohne Berührungen unmittelbar zu erkennen und vollständig zu verstehen … "
+  "sn35.112:1.5": "Ohne Berührungen unmittelbar zu erkennen und vollständig zu verstehen … ",
+  "sn35.112:1.6": "Ohne Gedanken unmittelbar zu erkennen und vollständig zu verstehen, ohne dass die Leidenschaft für sie schwindet und man sie aufgibt, kann man das Leiden nicht beenden. "
 }
