--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.112_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.112_translation-de-sabbamitta.json
@@ -9,5 +9,6 @@
   "sn35.112:1.5": "Ohne Berührungen unmittelbar zu erkennen und vollständig zu verstehen … ",
   "sn35.112:1.6": "Ohne Gedanken unmittelbar zu erkennen und vollständig zu verstehen, ohne dass die Leidenschaft für sie schwindet und man sie aufgibt, kann man das Leiden nicht beenden. ",
   "sn35.112:1.7": "Indem man Bilder unmittelbar erkennt und vollständig versteht … ",
-  "sn35.112:1.8": "Indem man Töne unmittelbar erkennt und vollständig versteht … "
+  "sn35.112:1.8": "Indem man Töne unmittelbar erkennt und vollständig versteht … ",
+  "sn35.112:1.9": "Indem man Düfte unmittelbar erkennt und vollständig versteht … "
 }
