--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.112_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.112_translation-de-sabbamitta.json
@@ -12,5 +12,6 @@
   "sn35.112:1.8": "Indem man Töne unmittelbar erkennt und vollständig versteht … ",
   "sn35.112:1.9": "Indem man Düfte unmittelbar erkennt und vollständig versteht … ",
   "sn35.112:1.10": "Indem man Geschmäcke unmittelbar erkennt und vollständig versteht … ",
-  "sn35.112:1.11": "Indem man Berührungen unmittelbar erkennt und vollständig versteht … "
+  "sn35.112:1.11": "Indem man Berührungen unmittelbar erkennt und vollständig versteht … ",
+  "sn35.112:1.12": "Indem man Gedanken unmittelbar erkennt und vollständig versteht, indem die Leidenschaft für sie schwindet und man sie aufgibt, kann man das Leiden beenden.“ "
 }
