--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.114_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.114_translation-de-sabbamitta.json
@@ -1,5 +1,6 @@
 {
   "sn35.114:0.1": "Verbundene Lehrreden 35.114 ",
   "sn35.114:0.2": "12. Das Kapitel über die Welt und die Arten von Sinnesreizen ",
-  "sn35.114:0.3": "Māras Schlinge (1) "
+  "sn35.114:0.3": "Māras Schlinge (1) ",
+  "sn35.114:1.1": "„Mönche und Nonnen, es gibt Bilder, die das Auge erkennt, erwünscht, willkommen, angenehm, erfreulich, sinnlich und erregend. "
 }
