--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.114_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.114_translation-de-sabbamitta.json
@@ -4,5 +4,6 @@
   "sn35.114:0.3": "Māras Schlinge (1) ",
   "sn35.114:1.1": "„Mönche und Nonnen, es gibt Bilder, die das Auge erkennt, erwünscht, willkommen, angenehm, erfreulich, sinnlich und erregend. ",
   "sn35.114:1.2": "Wenn ein Mönch diesen zustimmt, sie begrüßt und daran weiter festhält, ",
-  "sn35.114:1.3": "nennt man ihn einen Mönch, der in Māras Schlupfwinkel festgesetzt ist, der in Māras Bann geraten und in Māras Schlinge gefangen ist. "
+  "sn35.114:1.3": "nennt man ihn einen Mönch, der in Māras Schlupfwinkel festgesetzt ist, der in Māras Bann geraten und in Māras Schlinge gefangen ist. ",
+  "sn35.114:1.4": "Er ist von Māras Fesseln gebunden, und der Böse kann mit ihm machen, was er will. "
 }
