--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.114_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.114_translation-de-sabbamitta.json
@@ -6,5 +6,6 @@
   "sn35.114:1.2": "Wenn ein Mönch diesen zustimmt, sie begrüßt und daran weiter festhält, ",
   "sn35.114:1.3": "nennt man ihn einen Mönch, der in Māras Schlupfwinkel festgesetzt ist, der in Māras Bann geraten und in Māras Schlinge gefangen ist. ",
   "sn35.114:1.4": "Er ist von Māras Fesseln gebunden, und der Böse kann mit ihm machen, was er will. ",
-  "sn35.114:2.1": "Es gibt Töne, die das Ohr erkennt … Es gibt Düfte, die die Nase erkennt … Es gibt Geschmäcke, die die Zunge erkennt … Es gibt Berührungen, die der Körper erkennt … "
+  "sn35.114:2.1": "Es gibt Töne, die das Ohr erkennt … Es gibt Düfte, die die Nase erkennt … Es gibt Geschmäcke, die die Zunge erkennt … Es gibt Berührungen, die der Körper erkennt … ",
+  "sn35.114:3.1": "Es gibt Gedanken, die der Geist erkennt, erwünscht, willkommen, angenehm, erfreulich, sinnlich und erregend. "
 }
